src/components/GraphEditor/comp.scss
@import "src/colors";

.rete-editor {
  height: 100%;

  display: flex;
  flex-wrap: nowrap;
  flex-direction: column;
  height: 100%;
  .dock {
    height: 100px;
    overflow-x: auto;
    overflow-y: hidden;
    white-space: nowrap;
  }

  .dock-item {
    display: inline-block;
    vertical-align: top;
    transform: scale(0.8);
    transform-origin: 50% 0;
    .settings {
      display: none;
    }
  }

  .rete-container {
    flex: 1;
    overflow: hidden;
    .node-editor {
      width: 100%;
      height: 100%;
      .connection {
        path {
          stroke: $palette-5-hex;
        }
      }
    }
  }
  .dock,
  .node-editor {
    .node {
      border-color: transparent;
      &.selected {
        opacity: 0.9;
      }
    }
  }

  position: relative;
  .save-load {
    text-align: left;
    position: absolute;
    top: 5px;
    right: 5px;
    width: 50%;
    max-width: 330px;
  }
}

